--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "@openzeppelin/cli": "^2.8.2",
     "@openzeppelin/contracts-ethereum-package": "^3.0.0",
-    "truffle": "^5.1.43"
+    "truffle": "^5.1.43",
+    "web3": "^1.2.11"
   },
   "devDependencies": {
     "@openzeppelin/contracts": "^3.2.0"
