--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "dependencies": {
     "@openzeppelin/cli": "^2.8.2",
     "@openzeppelin/contracts-ethereum-package": "^3.0.0",
-    "truffle": "^5.1.43",
+    "truffle": "^5.1.45",
     "web3": "^1.2.11"
   },
   "devDependencies": {
-    "@openzeppelin/contracts": "^3.2.0"
+    "@openzeppelin/contracts": "^3.2.0",
+    "@openzeppelin/test-helpers": "^0.5.6"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
