--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
   "dependencies": {
     "@openzeppelin/cli": "^2.8.2",
     "@openzeppelin/contracts-ethereum-package": "^3.0.0",
+    "bn.js": "^5.1.3",
     "truffle": "^5.1.45",
     "web3": "^1.2.11"
   },
   "devDependencies": {
     "@openzeppelin/contracts": "^3.2.0",
-    "@openzeppelin/test-helpers": "^0.5.6"
+    "@openzeppelin/test-environment": "^0.1.5",
+    "@openzeppelin/test-helpers": "^0.5.6",
+    "chai": "^4.2.0",
+    "mocha": "^8.1.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "oz compile && mocha --exit --recursive test"
   },
   "repository": {
     "type": "git",
