--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "mocha": "^8.1.3"
   },
   "scripts": {
-    "test": "oz compile && mocha --exit --recursive test"
+    "test": "oz compile && mocha --exit --recursive test --timeout 5000"
   },
   "repository": {
     "type": "git",
