--- a/.gitignore
+++ b/.gitignore
@@ -192,5 +192,8 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
-.openzeppelin/
+# OpenZeppelin
+.openzeppelin/dev-*.json
+.openzeppelin/.session
 build/
+secrets.json
