--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@openzeppelin/cli": "^2.8.2",
     "@openzeppelin/contracts-ethereum-package": "^3.0.0",
     "bn.js": "^5.1.3",
-    "truffle": "^5.1.45",
     "web3": "^1.2.11"
   },
   "devDependencies": {
@@ -16,8 +15,10 @@
     "@openzeppelin/test-helpers": "^0.5.6",
     "@truffle/hdwallet-provider": "^1.1.0",
     "chai": "^4.2.0",
+    "ganache-cli": "^6.12.0",
     "husky": "^4.3.0",
-    "mocha": "^8.1.3"
+    "mocha": "^8.1.3",
+    "truffle": "^5.1.49"
   },
   "scripts": {
     "test": "oz compile && mocha --exit --recursive test --timeout 5000"
