Fixed package.json name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ERC-20 Wrapper Gluwacoin",
+  "name": "ERC-20-Wrapper-Gluwacoin",
   "version": "1.0.0",
   "description": "",
   "main": "networks.js",
