--- a/package.json
+++ b/package.json
@@ -6,19 +6,23 @@
   "dependencies": {
     "@openzeppelin/cli": "^2.8.2",
     "@openzeppelin/contracts-ethereum-package": "^3.0.0",
+    "@openzeppelin/contracts-upgradeable": "^3.2.0",
     "bn.js": "^5.1.3",
     "web3": "^1.2.11"
   },
   "devDependencies": {
     "@openzeppelin/contracts": "^3.2.0",
-    "@openzeppelin/test-environment": "^0.1.5",
+    "@openzeppelin/test-environment": "^0.1.7",
     "@openzeppelin/test-helpers": "^0.5.6",
-    "@truffle/hdwallet-provider": "^1.1.0",
+    "@openzeppelin/truffle-upgrades": "^1.3.0",
+    "@truffle/hdwallet-provider": "^1.2.0",
     "chai": "^4.2.0",
-    "ganache-cli": "^6.12.0",
+    "dotenv": "^8.2.0",
+    "ganache-cli": "^6.12.1",
     "husky": "^4.3.0",
     "mocha": "^8.1.3",
-    "truffle": "^5.1.49"
+    "truffle": "^5.1.49",
+    "upgrade": "^1.1.0"
   },
   "scripts": {
     "test": "oz compile && mocha --exit --recursive test --timeout 5000"
