--- a/.gitignore
+++ b/.gitignore
@@ -194,6 +194,7 @@ fabric.properties
 
 # OpenZeppelin
 .openzeppelin/dev-*.json
+.openzeppelin/unknown-*.json
 .openzeppelin/.session
 build/
 secrets.json
