--- a/cleanroom/package.json
+++ b/cleanroom/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.2",
   "description": "",
   "main": "index.js",
+  "dependencies": {
+    "@openzeppelin/contracts-ethereum-package": "^3.0.0"
+  },
   "devDependencies": {
     "@openzeppelin/contracts": "^3.3.0",
     "@openzeppelin/truffle-upgrades": "^1.3.1",
