--- a/.gitignore
+++ b/.gitignore
@@ -347,3 +347,18 @@ package-lock.json
 # OpenZeppelin
 .openzeppelin/dev-*.json
 .openzeppelin/.session
+
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+
+# Gradle and Maven with auto-import
+# When using Gradle or Maven with auto-import, you should exclude module files,
+# since they will be recreated, and may cause churn.  Uncomment if using
+# auto-import.
+.idea/artifacts
+.idea/compiler.xml
+.idea/jarRepositories.xml
+.idea/*.iml
+.idea/modules
+*.iml
+*.ipr
