--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "devDependencies": {
     "@openzeppelin/contracts": "^3.3.0",
+    "@openzeppelin/test-environment": "^0.1.9",
+    "@openzeppelin/test-helpers": "^0.5.10",
     "@openzeppelin/truffle-upgrades": "^1.3.1",
     "chai": "^4.2.0",
     "ganache-cli": "^6.12.1",
