--- a/package.json
+++ b/package.json
@@ -4,16 +4,9 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "@openzeppelin/contracts-ethereum-package": "^3.0.0"
-  },
-  "devDependencies": {
-    "@openzeppelin/contracts": "^3.3.0",
-    "@openzeppelin/test-environment": "^0.1.9",
-    "@openzeppelin/test-helpers": "^0.5.10",
-    "@openzeppelin/truffle-upgrades": "^1.3.1",
-    "chai": "^4.2.0",
-    "ganache-cli": "^6.12.1",
-    "truffle": "^5.1.59"
+    "@openzeppelin/contracts": "^3.4.0",
+    "@openzeppelin/contracts-ethereum-package": "^3.0.0",
+    "truffle": "^5.1.67"
   },
   "repository": {
     "type": "git",
@@ -25,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/gluwa/ERC-20-Wrapper-Gluwacoin/issues"
   },
-  "homepage": "https://github.com/gluwa/ERC-20-Wrapper-Gluwacoin#readme"
+  "homepage": "https://github.com/gluwa/ERC-20-Wrapper-Gluwacoin#readme",
+  "devDependencies": {
+    "chai": "^4.3.3"
+  }
 }
