--- a/package.json
+++ b/package.json
@@ -20,6 +20,14 @@
   },
   "homepage": "https://github.com/gluwa/ERC-20-Wrapper-Gluwacoin#readme",
   "devDependencies": {
-    "chai": "^4.3.3"
+    "@openzeppelin/test-environment": "^0.1.9",
+    "@openzeppelin/test-helpers": "^0.5.12",
+    "@openzeppelin/truffle-upgrades": "^1.8.0",
+    "chai": "^4.3.4",
+    "mocha": "^8.1.2",
+    "solidity-coverage": "^0.7.16"
+  },
+  "scripts": {
+    "test": "mocha --exit --recursive --timeout 10000"
   }
 }
