GLA-333 Fix security problems relating to sig

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@gluwa/erc-20-wrapper",
-  "version": "1.0.8",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "@openzeppelin/contracts": "^3.4.0",
-    "@openzeppelin/contracts-ethereum-package": "^3.0.0",
-    "truffle": "^5.1.67"
+    "@openzeppelin/contracts": "^4.2.0",
+    "truffle": "^5.1.67",
+    "truffle-privatekey-provider": "^1.5.0"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/gluwa/ERC-20-Wrapper-Gluwacoin#readme",
   "devDependencies": {
+    "@nomiclabs/buidler": "^1.4.8",
+    "@openzeppelin/contracts-upgradeable": "^4.2.0",
     "@openzeppelin/test-environment": "^0.1.9",
     "@openzeppelin/test-helpers": "^0.5.12",
     "@openzeppelin/truffle-upgrades": "^1.8.0",
