--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@openzeppelin/test-environment": "^0.1.9",
     "@openzeppelin/test-helpers": "^0.5.12",
     "@openzeppelin/truffle-upgrades": "^1.8.0",
+    "@truffle/hdwallet-provider": "^1.4.2",
     "chai": "^4.3.4",
     "mocha": "^8.1.2",
     "solidity-coverage": "^0.7.16"
