--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
+      - name: Disable migration upgrade script
+        run: mv migrations/3_upgrade_ERC20WrapperGluwacoin.js migrations/3_upgrade_ERC20WrapperGluwacoin.js_
+
       - name: NPM install
         run: npm install
 
