--- a/.gitignore
+++ b/.gitignore
@@ -368,3 +368,13 @@ secret
 coverage.json
 .openzeppelin/unknown-*.json
 infuraAPI
+.env.development
+node_modules
+.env
+coverage
+coverage.json
+typechain
+
+#Hardhat files
+cache
+artifacts
