--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@openzeppelin/contracts": "^4.2.0",
+    "@openzeppelin/hardhat-upgrades": "^1.19.0",
+    "hardhat-awesome-cli": "^0.0.15",
     "truffle": "^5.1.67",
     "truffle-privatekey-provider": "^1.5.0"
   },
@@ -21,12 +24,18 @@
   "homepage": "https://github.com/gluwa/ERC-20-Wrapper-Gluwacoin#readme",
   "devDependencies": {
     "@nomiclabs/buidler": "^1.4.8",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.0",
     "@openzeppelin/contracts-upgradeable": "^4.2.0",
     "@openzeppelin/test-environment": "^0.1.9",
     "@openzeppelin/test-helpers": "^0.5.12",
     "@openzeppelin/truffle-upgrades": "^1.8.0",
     "@truffle/hdwallet-provider": "^1.4.2",
-    "chai": "^4.3.4",
+    "chai": "^4.2.0",
+    "dotenv": "^16.0.1",
+    "ethereum-waffle": "^3.0.0",
+    "ethers": "^5.0.0",
+    "hardhat": "^2.9.9",
     "mocha": "^8.1.2",
     "solidity-coverage": "^0.7.16"
   },
