--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@openzeppelin/contracts": "^4.2.0",
     "@openzeppelin/hardhat-upgrades": "^1.19.0",
-    "hardhat-awesome-cli": "^0.0.15",
     "truffle": "^5.1.67",
     "truffle-privatekey-provider": "^1.5.0"
   },
@@ -32,6 +31,7 @@
     "@openzeppelin/truffle-upgrades": "^1.8.0",
     "@truffle/hdwallet-provider": "^1.4.2",
     "chai": "^4.2.0",
+    "deployment-tool": "^0.1.0",
     "dotenv": "^16.0.1",
     "ethereum-waffle": "^3.0.0",
     "ethers": "^5.0.0",
