--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -26,6 +26,11 @@
     {
       "matchDepTypes": ["devDependencies"],
       "automerge": true
+    },
+    {
+      "matchDepTypes": ["dependencies"],
+      "excludeDepNames": ["*"],
+      "automerge": false
     }
   ]
 }
