--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,36 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:base"
-  ],
-  "labels": ["dependencies"],
-  "lockFileMaintenance": {
-    "enabled": true,
-    "automerge": true,
-    "automergeType": "pr",
-    "platformAutomerge": true
-  },
-  "packageRules": [
-    {
-      "matchPackagePatterns": ["prettier"],
-      "labels": ["formatter"]
-    },
-    {
-      "matchPackagePatterns": ["eslint"],
-      "labels": ["linting"]
-    },
-    {
-      "matchDepTypes": ["optionalDependencies"],
-      "addLabels": ["optional"]
-    },
-    {
-      "matchDepTypes": ["devDependencies"],
-      "automerge": true
-    },
-    {
-      "matchDepTypes": ["dependencies"],
-      "excludeDepNames": ["*"],
-      "automerge": false
-    }
+    "config:base",
+    "github>gluwa/Contract-Utilities//.github/renovate"
   ]
 }
